--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/a844133b0f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <div class="nav-bar">
+            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_light_color_92x30dp.png" alt="google-logo" id="logo">
+            <div>
+                <input type="text" id="search-bar">
+                <i class="fa-regular fa-xmark"></i>
+                <img src="images/google-voice.png" alt="google-voice" width="25px" height="25px">
+                <i class="fa-solid fa-camera"></i>
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <div>
+                <i class="fa-solid fa-gear"></i>
+                
+            </div>
+
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
